--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -8,7 +8,7 @@ pipeline {
   stages {
     stage('Checkout') {
       steps {
-        git branch: 'main', url: 'https://github.com/iamanjalibhat/Jenkins-Zero-To-Hero.git'
+        git 'https://github.com/iamanjalibhat/Jenkins-Zero-To-Hero.git'
       }
     }
     stage('Build and Test') {
